@@ -19,6 +19,9 @@ New Features
 Bug Fixes
 *********
 
+* Correctly set the Content-Type  header when http POSTing to comply
+  with stricter web frameworks. (Vincent Ladeuil, #655100)
+
 * ``NotBranchError`` no longer allows errors from calling
   ``bzrdir.open_repository()`` to propagate.  This is unhelpful at best,
   and at worst can trigger infinite loops in callers.  (Andrew Bennetts)
